added a bit of polish, bumped the version numbers

--- a/safari-utm-stripper.safariextension/omnibar.html
+++ b/safari-utm-stripper.safariextension/omnibar.html
@@ -3,5 +3,5 @@
 <head>
     <script type="text/javascript" src="charisma.js"></script>
 </head>
-<body></body>
+<body>This space intentionally left blank.  Please hide the UTM Stripper Toolbar using View->Hide UTM Stripper Bar</body>
 </html>
