Verified permissions before acting on url.  If event.url is null, bail
Prevented default on event, which didn't seem to be causing an issue but
is good practice.

Bumped the version to 3.0.1

--- a/safari-utm-stripper.safariextension/omnibar.html
+++ b/safari-utm-stripper.safariextension/omnibar.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <title>UTM Stripper</title>
+    <meta charset="utf-8">
     <script type="text/javascript" src="charisma.js"></script>
 </head>
 <body>This space intentionally left blank.  Please hide the UTM Stripper Toolbar using View->Hide UTM Stripper Bar</body>
